[tool.poetry]
name = "based-api"
version = "1.0.0"
description = "based-api is a package that serves predictions from the Boost-Assissted Stream Estimator for Depth (BASED).BASED is an XGBoost regressor deployed using Streamlit. This package is designed for making channel depth predictions using channel width, slope, and discharge."
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.0"
xgboost = "^2.1.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
