[project]
name = "based-api"
version = "2.0.0"
description = "Boost-Assisted Stream Estimator for Depth (BASED) — predicts bankfull channel depth from discharge, width, and slope."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jake Gearon", email = "jake.gearon@gmail.com" }]
dependencies = [
    "xgboost>=2.1.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "numpy>=1.24.0",
    "streamlit>=1.54.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "optuna>=4.0.0",
    "openpyxl>=3.1.0",
    "tornado>=6.5.5",
    "Pillow>=12.2.0",
    "requests>=2.31.0",
    "pyproj>=3.6.0",
]

[project.scripts]
based-api = "uvicorn:main"

[tool.uv]
dev-dependencies = [
    "scipy>=1.11.0",
    "requests>=2.31.0",
    "pynhd>=0.18.0",
]
